gccida/c2/pushlevel
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/pushlevel/src/c-decl.c:1393:12: error: expected expression
*( _OWORD *)&v1->parm_flag = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/pushlevel/src/c-decl.c:1393:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v1->parm_flag = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/pushlevel/src/c-decl.c:1394:12: error: expected expression
*( _OWORD *)&v1->this_block = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/pushlevel/src/c-decl.c:1394:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v1->this_block = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/pushlevel/src/c-decl.c:1395:12: error: expected expression
*( _OWORD *)&v1->shadowed = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/pushlevel/src/c-decl.c:1395:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v1->shadowed = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/pushlevel/src/c-decl.c:1396:12: error: expected expression
*( _OWORD *)&v1->names = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/pushlevel/src/c-decl.c:1396:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v1->names = 0LL; 
   ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/pushlevel/src/obj/c-decl.o] Error 1
